# ultracos

./: CHANGELOG.md  README.md  SECURITY.md
.claude-plugin/: plugin.json
.github/: osv-scanner.toml
.github/workflows/: ci.yml
calibration/: README.md  snapshot.json
glyphdown-core/src/: audit.rs  data_dir.rs  hook.rs
hooks/PostToolUse/: glyphdown_codec.py  ultracos_codec.py
hooks/PostToolUse/tests/: conftest.py  test_oversize_compact.py
hooks/PreToolUse/: glyphdown_history_dedup.py
hooks/PreToolUse/tests/: test_dedup_serve.py
skills/ultracos-mode/: SKILL.md
ultracos-core/: Cargo.toml
ultracos-core/src/: cache.rs  codec.rs  dedup.rs  extract.rs  gate.rs  hook.rs  main.rs  readiness.rs  rewind.rs  signed_ccr.rs
